test/JDBC/expected/singledb__verification_cleanup__BABEL-1444-vu-verify.out
USE MASTER
GO

DECLARE @usr CHAR(30)
DECLARE @cur_usr CHAR(30)
SET @usr = user
SET @cur_usr = current_user
SELECT 'user: '+ @usr
SELECT 'current_user: '+ @cur_usr
GO
~~START~~
varchar
user: dbo                           
~~END~~

~~START~~
varchar
current_user: dbo                           
~~END~~


SELECT * FROM dbo.babel_1444_vu_prepare_t1 ORDER BY id;  
GO
~~START~~
int#!#varchar#!#varchar#!#varchar
100#!#Orange#!#dbo#!#dbo
101#!#Blue#!#dbo#!#dbo
102#!#Green#!#Bob#!#dbo
103#!#Purple#!#dbo#!#Alice
104#!#Red#!#Mike#!#Dave
~~END~~


CREATE DATABASE babel_1444_db1;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Only one user database allowed under single-db mode. User database "babel_3190_vu_prepare_db" already exists)~~


SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~


USE babel_1444_db1;
GO
~~ERROR (Code: 911)~~

~~ERROR (Message: database "babel_1444_db1" does not exist)~~


SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~


-- Error: Test DROP
DROP DATABASE babel_1444_db1;
GO
~~ERROR (Code: 911)~~

~~ERROR (Message: database "babel_1444_db1" does not exist)~~


SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~


-- Test DROP when using another database
USE MASTER;
GO

SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~


DROP DATABASE babel_1444_db1;
GO
~~ERROR (Code: 911)~~

~~ERROR (Message: database "babel_1444_db1" does not exist)~~


SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~


-- Test CREATE
CREATE DATABASE babel_1444_db1;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Only one user database allowed under single-db mode. User database "babel_3190_vu_prepare_db" already exists)~~


SELECT current_setting('role');
GO
~~START~~
text
master_dbo
~~END~~

SELECT current_setting('search_path');
GO
~~START~~
text
master_dbo, "$user", sys, pg_catalog
~~END~~

SELECT session_user, current_user, user;
GO
~~START~~
nvarchar#!#varchar#!#nvarchar
dbo#!#dbo#!#dbo
~~END~~

SELECT user_name();
GO
~~START~~
nvarchar
dbo
~~END~~

